--- a/html/login.html
+++ b/html/login.html
@@ -65,7 +65,7 @@
             });
 
             FB.getLoginStatus(function (response) {
-                console.log('FB.getLoginStatus response=',response);
+                console.log('FB.getLoginStatus response=', response);
                 if (response.authResponse) {
                     // logged in and connected user, someone you know
                     console.log('you know this user!!');
@@ -112,6 +112,11 @@
             FB.api('/me', { locale: 'en_US', fields: 'email,first_name,last_name,birthday, link, gender, age_range' },
                 function (response) {
                     console.log("response = ", response);
+                    console.log("email = ",response.email);
+                    window.parent.fblogin(response.email,response.first_name, response.last_name, _gUserType);
+                    // check in db that this user is in exist or not 
+                    // if yes go to main page 
+                    // if no redirect to register
                 }
             );
         }
